libycp/testsuite/tests/values/PathErr1.err
[Parser] tests/values/PathErr1.ycp:18 dash behind path constant not allowed
[Parser] tests/values/PathErr1.ycp:18 syntax error, unexpected SCANNER_ERROR
runycp: parser error
