libycp/testsuite/tests/values/PathErr1.ycp

# ---------------------------------------------------------
#
#  Filename:    PathErr1.ycp
#
#  Purpose:     test cases for YCP Path
#
#  Creator:     kkaempf@suse.de
#
#  Maintainer:  jd@suse.de
#
# ---------------------------------------------------------

# paths may have '-' inside
# but not directly before or after '.'
# and '-' can not be the last character

(.dash.forbidden-)
